syntax = "proto3";

package grpcprotos.category;

option csharp_namespace = "GrpcProtos.Category";

service CategoryService {
  rpc create(CategoryCreateRequest) returns (CategoryResponse) {};
  rpc update(CategoryUpdateRequest) returns (CategoryResponse) {};
  rpc delete(CategoryDeleteRequest) returns (DeleteResponse) {};
  rpc getById(CategoryGetByIdRequest) returns (CategoryResponse) {};
  rpc search(CategorySearchRequest) returns (CategorySearchResponse) {};
}

message CategoryCreateRequest {
  string title = 1;
  string parent_id = 2;
  string description = 3;
  string image_path = 4;
}

message CategoryUpdateRequest {
  string id = 1;
  string title = 2;
  string parent_id = 3;
  string description = 4;
  string image_path = 5;
}

message CategoryDeleteRequest {
  string id = 1;
}

message CategoryGetByIdRequest {
  string id = 1;
}

message CategorySearchRequest {
  string id = 1;
  string parent_id = 2;
  string title = 3;
  string image_path = 4;
  string description = 5;
  bool is_deleted = 6;
  string sort_direction = 7; // default = ASC
  int32 page = 8; // default = 1
  int32 size = 9; // default 10
}

message CategoryResponse {
  string id = 1;
  string title = 2;
  string parent_id = 3;
  string description = 4;
  string image_path = 5;
  bool status = 6;
  bool is_deleted = 7;
}

message DeleteResponse {
  bool is_deleted = 1;
}

message CategorySearchResponse {
  repeated CategoryResponse results = 1;
  int64 total_count = 2;
}

